layout: status, commands

--- a/web/public/js/app/dashboard/templates/dashboard.html
+++ b/web/public/js/app/dashboard/templates/dashboard.html
@@ -1,2 +1,10 @@
-<div>DASHBOARD</div>
-<div class="js-is-running"></div>
+<div class="panel panel-default">
+    <div class="panel-heading">Commands</div>
+    <div class="panel-body">
+        <div>
+            SetTime
+        </div>
+        <div>DASHBOARD</div>
+        <div class="js-is-running"></div>
+    </div>
+</div>
