--- a/web/public/js/app/dashboard/templates/dashboard.html
+++ b/web/public/js/app/dashboard/templates/dashboard.html
@@ -1,8 +1,13 @@
 <div class="panel panel-default">
     <div class="panel-heading">Commands</div>
     <div class="panel-body">
+        // Start/Stop service
+        // Force status update
+        // set time
+        // set range
+        // set standby
         <div>
-            SetTime
+            <button type="button" class="btn btn-primary">Primary</button>
         </div>
         <div>DASHBOARD</div>
         <div class="js-is-running"></div>
