--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -12,16 +12,16 @@
     {{#if compiled}}
         <link rel='stylesheet' href='/styles/bootstrap.min.css' />
         <link rel='stylesheet' href='/styles/bootstrap-theme.min.css' />
-        <link rel='stylesheet' href='/styles/generated.min.css' />
         <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.min.css">
+        <link rel='stylesheet' href='/styles/generated.min.css' />
         <script type="text/javascript" src="/js/lib/require/require.js" data-main="js/compiled/Init.js"></script>
     {{else}}
         <link rel='stylesheet' href='/styles/bootstrap.css' />
         <link rel='stylesheet' href='/styles/bootstrap-theme.css' />
-        <link rel='stylesheet' href='/styles/generated.css' />
         <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.css">
         <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.css">
+        <link rel='stylesheet' href='/styles/generated.css' />
         <script type="text/javascript" src="/js/lib/require/require.js" data-main="js/Init.js"></script>
     {{/if}}
 </head>
@@ -31,7 +31,7 @@
             <a class="navbar-brand" href="#">DevMan v1.0</a>
         </div>
     </nav>
-    <div class="dev-sidebar">
+    <div class="dev-sidebar sidebar">
         <ul class="nav" id="side-menu">
             <li>
                 <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
@@ -48,6 +48,72 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Mag Device Status</div>
+                        <div class="panel-body eb-device__panel-body">
+                            <div class="eb-device__loading-panel">
+                                <div class="eb-device__loading-panel__fill"></div>
+                                <div class="eb-device__loading-panel__text">
+                                    <div class="fa fa-cog fa-spin fa-2x"></div>
+                                </div>
+                            </div>
+                            <table class="table">
+                                <!--<caption><button type="button" class="btn btn-primary btn-xs">Force Update</button></caption>-->
+                                <thead>
+                                    <tr>
+                                        <th>Property Name</th>
+                                        <th>Property Value</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Updated</td>
+                                        <td>29.02.2008 15:55:54 UTC <button type="button" class="btn btn-primary btn-xs">Update now</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Registration Status</td>
+                                        <td>Stopped <button type="button" class="btn btn-success btn-xs">Start</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sampling Interval (ms)</td>
+                                        <td>500</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Stand By</td>
+                                        <td>True <button type="button" class="btn btn-primary btn-xs">Turn off</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Device Time</td>
+                                        <td>29.02.2008 15:55:54.123 UTC <button type="button" class="btn btn-primary btn-xs">Fix</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Range (pT)</td>
+                                        <td>
+                                            [ 47500, 56000 ] <button type="button" class="btn btn-primary btn-xs">Change</button>
+                                            <div class="form-group eb-device__update-range-container">
+                                                <label for="newCenterRange">Center range (pT)</label>
+                                                <input id="newCenterRange" type="number" class="form-control" placeholder="Range">
+                                                <button type="button" class="btn btn-primary btn-sm eb-device__update-range-btn">Update</button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>ENQ</td>
+                                        <td>MagState version 3.03</td>
+                                    </tr>
+                                    <tr>
+                                        <td>About</td>
+                                        <td>MagState version 3.03<br>
+                                            Quantum Magnetometry Laboratory<br>
+                                            Urals State Technical University<br>
+                                            Copyright 2013.</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
                     <div class="js-application-login-region"></div>
                     <div class="js-application-fading-region hidden"></div>
                     <div class="js-application-popup-region dev-popup-container hidden"></div>
@@ -56,47 +122,6 @@
                     <div class="js-application-content-region layout"></div>
                     <div class="js-startup-loading">
                         INITIAL LOADING...
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Device Status</div>
-                        <div class="panel-body">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Value</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Foo</td>
-                                        <td>Bar</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
                     </div>
                 </div>
             </div>
