--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -26,105 +26,17 @@
     {{/if}}
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">DevMan v1.0</a>
-        </div>
-    </nav>
-    <div class="dev-sidebar sidebar">
-        <ul class="nav" id="side-menu">
-            <li>
-                <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-            </li>
-        </ul>
-    </div>
-    <!--<div id="page-wrapper">-->
-    <div class="dev-content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="page-header">Mag Device Management Dashboard</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Mag Device Status</div>
-                        <div class="panel-body eb-device__panel-body">
-                            <div class="eb-device__loading-panel">
-                                <div class="eb-device__loading-panel__fill"></div>
-                                <div class="eb-device__loading-panel__text">
-                                    <div class="fa fa-cog fa-spin fa-2x"></div>
-                                </div>
-                            </div>
-                            <table class="table">
-                                <!--<caption><button type="button" class="btn btn-primary btn-xs">Force Update</button></caption>-->
-                                <thead>
-                                    <tr>
-                                        <th>Property Name</th>
-                                        <th>Property Value</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Updated</td>
-                                        <td>29.02.2008 15:55:54 UTC <button type="button" class="btn btn-primary btn-xs">Update now</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Registration Status</td>
-                                        <td>Stopped <button type="button" class="btn btn-success btn-xs">Start</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Sampling Interval (ms)</td>
-                                        <td>500</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Stand By</td>
-                                        <td>True <button type="button" class="btn btn-primary btn-xs">Turn off</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Device Time</td>
-                                        <td>29.02.2008 15:55:54.123 UTC <button type="button" class="btn btn-primary btn-xs">Fix</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Range (pT)</td>
-                                        <td>
-                                            [ 47500, 56000 ] <button type="button" class="btn btn-primary btn-xs">Change</button>
-                                            <div class="form-group eb-device__update-range-container">
-                                                <label for="newCenterRange">Center range (pT)</label>
-                                                <input id="newCenterRange" type="number" class="form-control" placeholder="Range">
-                                                <button type="button" class="btn btn-primary btn-sm eb-device__update-range-btn">Update</button>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>ENQ</td>
-                                        <td>MagState version 3.03</td>
-                                    </tr>
-                                    <tr>
-                                        <td>About</td>
-                                        <td>MagState version 3.03<br>
-                                            Quantum Magnetometry Laboratory<br>
-                                            Urals State Technical University<br>
-                                            Copyright 2013.</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="js-application-login-region"></div>
-                    <div class="js-application-fading-region hidden"></div>
-                    <div class="js-application-popup-region dev-popup-container hidden"></div>
-                    <div class="js-application-side-navigation-region"></div>
-                    <div class="js-application-loading-region l-loader"></div>
-                    <div class="js-application-content-region layout"></div>
-                    <div class="js-startup-loading">
-                        INITIAL LOADING...
-                    </div>
-                </div>
-            </div>
+    <div class="js-application-navbar-region"></div>
+    <div class="js-application-sidebar-region app-sidebar sidebar"></div>
+    <div class="js-application-content-region app-content"></div>
+    <div class="js-application-popup-region"></div>
+    <div class="js-application-login-region"></div>
+    <div class="js-application-fading-region"></div>
+    <div class="js-application-loading-region"></div>
+    <div class="js-startup-loading app-startup-loading-panel">
+        <div class="app-startup-loading-panel__fill"></div>
+        <div class="app-startup-loading-panel__text">
+            <div class="fa fa-cog fa-spin fa-2x"></div>
         </div>
     </div>
 </body>
