--- a/web/public/js/module/navigation/templates/navbar.html
+++ b/web/public/js/module/navigation/templates/navbar.html
@@ -1,3 +1,3 @@
 <div class="navbar-header">
-    <a class="navbar-brand" href="#">DevMan v1.0</a>
+    <a class="navbar-brand" href="#">DevMan Console v1.0</a>
 </div>
