--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -108,10 +108,10 @@ body {
 
 .eb-device__data-update-spinner {
   opacity: 0;
-  transition: opacity 0.3s;
+  //transition: opacity 0.1s;
 }
 
 .eb-device__data-update-spinner_visible {
   opacity: 1;
-  transition: opacity 0.3s;
+  //transition: opacity 0.1s;
 }
