--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -11,16 +11,18 @@
 
     {{#if compiled}}
         <link rel='stylesheet' href='/styles/bootstrap.min.css' />
-        <link rel='stylesheet' href='/styles/bootstrap-theme.min.css' />
+        <!--<link rel='stylesheet' href='/styles/bootstrap-theme.min.css' />-->
         <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.min.css">
+        <link rel="stylesheet" href="/components/bootstrap-select/dist/css/bootstrap-select.min.css">
         <link rel='stylesheet' href='/styles/generated.min.css' />
         <script type="text/javascript" src="/js/lib/require/require.js" data-main="js/compiled/Init.js"></script>
     {{else}}
         <link rel='stylesheet' href='/styles/bootstrap.css' />
-        <link rel='stylesheet' href='/styles/bootstrap-theme.css' />
+        <!--<link rel='stylesheet' href='/styles/bootstrap-theme.css' />-->
         <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.css">
         <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.css">
+        <link rel="stylesheet" href="/components/bootstrap-select/dist/css/bootstrap-select.css">
         <link rel='stylesheet' href='/styles/generated.css' />
         <script type="text/javascript" src="/js/lib/require/require.js" data-main="js/Init.js"></script>
     {{/if}}
