--- a/web/public/js/app/dashboard/templates/ebDevice.html
+++ b/web/public/js/app/dashboard/templates/ebDevice.html
@@ -20,6 +20,10 @@
             <td><span class="js-status-updated"></span> <button type="button" class="btn btn-primary btn-xs js-force-update-button">Force device update</button></td>
         </tr>
         <tr>
+            <td>Commands in queue</td>
+            <td><span class="js-status-command-queue"></span></td>
+        </tr>
+        <tr>
             <td>Registration Status</td>
             <td>
                 <div class="js-cond-stopped">Running <button type="button" class="btn btn-danger btn-xs js-stop-logging-button">Stop</button></div>
