finished control panel, added diagnostics view

--- a/web/public/js/app/dashboard/templates/dashboard.html
+++ b/web/public/js/app/dashboard/templates/dashboard.html
@@ -5,4 +5,5 @@
 </div>
 <div class="row">
     <div class="col-lg-4 js-eb-device-region"></div>
+    <div class="col-lg-4 js-eb-device-diagnostics-region"></div>
 </div>
