--- a/web/public/js/app/dashboard/templates/ebDevice.html
+++ b/web/public/js/app/dashboard/templates/ebDevice.html
@@ -1,4 +1,4 @@
-<div class="panel-heading">MagState Device</div>
+<div class="panel-heading">MagState Control Panel</div>
 <div class="panel-body eb-device__panel-body">
     <div class="eb-device__loading-panel js-loading-panel">
         <div class="eb-device__loading-panel__fill"></div>
