fatal error handling

--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -41,5 +41,21 @@
             <div class="fa fa-cog fa-spin fa-2x"></div>
         </div>
     </div>
+    <!-- !!! -->
+    <div class="modal fade js-fatal-error-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Fatal error</h4>
+                </div>
+                <div class="modal-body">
+                    Something bad happened. Please reload the page.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-primary" data-dismiss="modal">Reload</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
