--- a/web/public/js/app/dashboard/templates/dashboard.html
+++ b/web/public/js/app/dashboard/templates/dashboard.html
@@ -4,6 +4,6 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-4 js-eb-device-region"></div>
-    <div class="col-lg-4 js-eb-device-diagnostics-region"></div>
+    <div class="col-lg-6 js-eb-device-region eb-device__control-panel-block"></div>
+    <div class="col-lg-6 js-eb-device-diagnostics-region eb-device__diagnostics-block"></div>
 </div>
