--- a/web/public/js/app/dashboard/templates/ebDeviceDiagnostics.html
+++ b/web/public/js/app/dashboard/templates/ebDeviceDiagnostics.html
@@ -6,6 +6,9 @@
             <div class="fa fa-cog fa-spin fa-2x"></div>
         </div>
     </div>
+    <h4><small>The service log is updated in real time <span class="fa fa-circle-o-notch fa-spin js-data-update-spinner eb-device__data-update-spinner"></span></small></h4>
+    <div class="js-log-list-region"></div>
+    <!--
     <table class="table js-data-table">
         <caption>The values here are updated in real time <span class="fa fa-circle-o-notch fa-spin js-data-update-spinner eb-device__data-update-spinner"></span></caption>
         <thead>
@@ -20,5 +23,5 @@
             <td><span class="js-status-updated"></span> <button type="button" class="btn btn-primary btn-xs js-force-update-button">Force device update</button></td>
         </tr>
         </tbody>
-    </table>
+    </table>-->
 </div>
