--- a/web/public/js/app/dashboard/templates/ebDevice.html
+++ b/web/public/js/app/dashboard/templates/ebDevice.html
@@ -49,6 +49,13 @@
             <td class="js-status-sampling-interval"></td>
         </tr>
         <tr>
+            <td>Diagnostics</td>
+            <td>
+                <button type="button" class="btn btn-primary btn-xs js-run-diagnostics-button">General</button>
+                <button type="button" class="btn btn-primary btn-xs js-run-auto-test-button">Sampling test</button>
+            </td>
+        </tr>
+        <tr>
             <td>Stand By</td>
             <td><span class="js-status-stand-by"></span> <button type="button" class="btn btn-primary btn-xs js-status-stand-by-button"></button></td>
         </tr>
