--- a/web/public/js/app/dashboard/templates/ebDeviceDataPlot.html
+++ b/web/public/js/app/dashboard/templates/ebDeviceDataPlot.html
@@ -7,6 +7,11 @@
         </div>
     </div>
     <div class="js-data-panel">
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Note:</strong> Real time data is available via SeedLink protocol
+            <a href="#" class="alert-link">here</a>
+        </div>
         <h4><small>The data is updated manually <button type="button" class="btn btn-primary btn-xs js-refresh-button">Refresh</button></small></h4>
         <div class="js-data-plot" style="height: 350px"></div>
     </div>
