material ui, styles

--- a/web/client/styles/main.scss
+++ b/web/client/styles/main.scss
@@ -1,144 +1,1 @@
-@import "sb-admin-2";
-
-$sideBarLength: 230px;
-
-body {
-  background-color: #fff;
-}
-
-.navbar-default {
-  box-shadow: none;
-}
-
-.loading-panel {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  top: 0;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.loading-panel__fill {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  top: 0;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.8;
-}
-
-.loading-panel__text {
-  position: relative;
-  z-index: 1;
-  display: inline-block;
-  align-self: center;
-}
-
-.app-startup-loading-panel {
-  @extend .loading-panel;
-}
-
-.app-startup-loading-panel__fill {
-  @extend .loading-panel__fill;
-}
-
-.app-startup-loading-panel__text {
-  @extend .loading-panel__text;
-}
-
-.app-nav__navbar {
-  margin-bottom: 0
-}
-
-.app-sidebar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  top: 0;
-  width: $sideBarLength;
-  background-color: #f8f8f8;
-  border: 0 solid #e7e7e7;
-  border-right-width: 1px;
-}
-
-.app-content {
-  position: absolute;
-  left: $sideBarLength;
-  top: 51px;
-  right: 0;
-  bottom: 0;
-}
-
-.form-label {
-  margin-top: 10px;
-  margin-bottom: 2px;
-}
-
-.eb-device__update-range-container {
-  margin-top: 10px;
-}
-
-.eb-device__mseed-settings-buttons {
-  margin: 10px 0 0 0;
-}
-
-.eb-device__update-range-btn {
-  margin-top: 10px;
-}
-
-.eb-device__panel-body {
-  position: relative;
-  min-height: 100px;
-}
-
-.eb-device__loading-panel {
-  @extend .loading-panel;
-}
-
-.eb-device__loading-panel__fill {
-  @extend .loading-panel__fill;
-}
-
-.eb-device__loading-panel__text {
-  @extend .loading-panel__text;
-}
-
-.eb-device__start-logging-container {
-  margin-top: 0px;
-}
-
-.eb-device__start-logging-btn {
-  margin-top: 10px;
-}
-
-.eb-device__data-update-spinner {
-  opacity: 0.3;
-  transition: opacity 0.1s;
-}
-
-.eb-device__data-update-spinner_visible {
-  opacity: 0.6;
-  transition: opacity 0.1s;
-}
-
-.eb-device__diagnostics-log-list {
-  height: 500px;
-  overflow-y: auto;
-}
-
-.eb-device__diagnostics-log-list-item__time {
-  border-bottom: dotted rgba(51, 51, 51, 0.4) thin;
-}
-
-.eb-device__control-panel-block {
-  min-width: 500px;
-  max-width: 600px;
-}
-
-.eb-device__diagnostics-block {
-  min-width: 520px;
-}
+@import 'reset';
